# scraping_service

./: .gitignore  pyproject.toml
scraping_service/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: home.html
